--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,32 @@
 :root {
     --grid-cols: 1;
     --grid-rows: 1;
-  }
-  
-  #container {
+}
+
+#container {
     display: grid;
     grid-gap: 1em;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
-  }
-  
-  .grid-item {
+}
+
+.grid-item {
     padding: 1em;
     border: 1px solid #ddd;
     text-align: center;
-  }
+}
+
+#navigation {
+    margin: 10px;
+    width: 100%;
+    height: 50px;
+    
+}
+
+button {
+    width: 100%;
+    height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+}
