--- a/styles.css
+++ b/styles.css
@@ -8,16 +8,16 @@
     grid-gap: 0em;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
+    overflow-x: auto;
 }
 
 .grid-item {
-    padding: 1em;
+    padding: 0.25em;
     border: 1px solid #ddd;
     text-align: center;
 }
 
 #navigation {
-    margin: 10px;
     width: 100%;
     height: 50px;
 }
